--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -14,6 +14,7 @@ RUN apk update \
 
 # install dependencies
 RUN pip install --upgrade pip
+COPY ./requirements_base.txt /usr/src/app/requirements_base.txt
 COPY ./requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
 
